--- a/wp-content/themes/bp-bunchof/style.css
+++ b/wp-content/themes/bp-bunchof/style.css
@@ -496,7 +496,7 @@ label[for=group-field-one]:after{content: ' (required)';}
 }
 
 /* event ticket styles (hide stuff) */
-.ticket-name, .ticket-description, .ticket-price, .em-ticket-form-advanced, .ticket-options {
+.ticket-name, .ticket-description, .ticket-price, .ticket-options {
     display: none; visibility: hidden;
 }
 .single-event #respond {
